--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,9 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Fitness_splash">
-
-
-
+        <activity
+            android:name=".chatbot"
+            android:exported="false" />
         <activity
             android:name=".qrscanner"
             android:exported="false" />
@@ -35,7 +37,6 @@
         <activity
             android:name=".activity_mode"
             android:exported="false" />
-
         <activity
             android:name=".home"
             android:exported="false" />
